clean ManageTeam view and controller